fix: align center

--- a/src/styles/login.module.scss
+++ b/src/styles/login.module.scss
@@ -1,82 +1,88 @@
 .container {
   display: flex;
   gap: 10px;
-  width: 100%;
-  height: 100%;
-  & > .login_container {
+  width: 100vw;
+  height: 100vh;
+
+  & > .wrapper {
+	width: 100%;
+	height: 100%;
     display: flex;
-    flex-direction: column;
-    width: 100%;
-    gap: 42px;
-    & > .header_container {
+    justify-content: center;
+    align-items: center;
+    & > .login_container {
       display: flex;
       flex-direction: column;
-      width: 100%;
-      // background-color: red;
-      gap: 11px;
-      & > .depth {
-        color: #646464;
-        font-weight: 500;
-        font-size: 18px;
-      }
-      & > .title_container {
+      gap: 42px;
+      & > .header_container {
         display: flex;
         flex-direction: column;
-        // nothing to do
-        & > .title {
-          font-size: 50px;
+        width: 100%;
+        // background-color: red;
+        gap: 11px;
+        & > .depth {
+          color: #646464;
+          font-weight: 500;
+          font-size: 18px;
         }
-        & > .paragraph {
-          color: #828282;
-          & > .login_span {
-            color: #ff4646;
+        & > .title_container {
+          display: flex;
+          flex-direction: column;
+          // nothing to do
+          & > .title {
+            font-size: 50px;
+          }
+          & > .paragraph {
+            color: #828282;
+            & > .login_span {
+              color: #ff4646;
+            }
           }
         }
       }
-    }
-    & > form {
-		display: flex;
-		flex-direction: column;
-		gap: 8px;
-		button {
-			font-size: 16px;
-			font-style: normal;
-			font-weight: 500;
-			padding: 16px;
-			width: 100%;
-			border-radius: 10px;
-			border: 1px solid rgba(#fff, 0.1);
-			background-color: #111;
-			color: white;
-			cursor: pointer;
-			font-weight: 500;
-
-		}
-		 input {
-			color: #fff;
-			font-family: Oswald;
-			font-size: 16px;
-			font-style: normal;
-			font-weight: 500;
-			padding: 16px;
-			border: none;
-			outline: none;
-			border-radius: 10px;
-			border: 1px solid rgba(#fff, 0.1);
-			background-color: #111;
-		}
-      div {
+      & > form {
         display: flex;
-        gap: 20px;
+        flex-direction: column;
+        gap: 8px;
+        button {
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 500;
+          padding: 16px;
+          width: 100%;
+          border-radius: 10px;
+          border: 1px solid rgba(#fff, 0.1);
+          background-color: #111;
+          color: white;
+          cursor: pointer;
+          font-weight: 500;
+        }
+        input {
+          color: #fff;
+          font-family: Oswald;
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 500;
+          padding: 16px;
+          border: none;
+          outline: none;
+          border-radius: 10px;
+          border: 1px solid rgba(#fff, 0.1);
+          background-color: #111;
+        }
+        div {
+          display: flex;
+          gap: 20px;
+        }
+        display: flex;
+        flex-direction: column;
+        width: fit-content;
       }
-      display: flex;
-      flex-direction: column;
-      width: fit-content;
     }
   }
   & > .vector_section {
-    background-color: blue;
-    width: 325px;
+    background-color: #FF4646;
+    min-width: 325px;
     height: 100vh;
   }
 }
