--- a/src/styles/utilities/_variables.scss
+++ b/src/styles/utilities/_variables.scss
@@ -8,7 +8,7 @@ $font-color-secondary: $black;
 // Application colors
 $servers-sidebar-bg: #15151c;
 $main-sidebar-bg: rgba(21, 21, 28, 0.97);
-$application-bg: rgba(21, 21, 28, 0.95);
+$application-bg: #1C1C1C;
 $wrapper-bg: $white;
 
 // Application sizing
